[gd_scene load_steps=2 format=3 uid="uid://cw8b2fisg5pjo"]

[ext_resource type="Script" uid="uid://luanj20t0pis" path="res://addons/qframework_godot/examples/simple/controller/counter_app_controller.gd" id="1_pfowr"]

[node name="CounterApp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pfowr")

[node name="CountText" type="Label" parent="."]
layout_mode = 0
offset_left = 486.0
offset_top = 286.0
offset_right = 629.0
offset_bottom = 368.0
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnAdd" type="Button" parent="."]
layout_mode = 0
offset_left = 454.0
offset_top = 213.0
offset_right = 664.0
offset_bottom = 266.0
theme_override_font_sizes/font_size = 40
text = "+"

[node name="BtnSub" type="Button" parent="."]
layout_mode = 0
offset_left = 453.0
offset_top = 370.0
offset_right = 663.0
offset_bottom = 433.0
theme_override_font_sizes/font_size = 40
text = "-"
